--- a/anygroup.yml
+++ b/anygroup.yml
@@ -12,10 +12,10 @@
     os_auditd_enabled: false
     sysctl_overwrite:
       net.ipv4.ip_forward: 1
+    network_ipv6_enable: true
+    ssh_listen_to: [0.0.0.0, "::"]
     fail2ban_services:
       - name: sshd
         port: 22
 
 # Associate further roles to servers in specific group in this file...
-
-...
