--- a/roles/common/tasks/wheresalice.yml
+++ b/roles/common/tasks/wheresalice.yml
@@ -6,14 +6,14 @@
     shell: /bin/bash
     groups: adm,docker
     append: true
-  with_items: "{{ gfsc_users }}"
+  with_items: "{{ wheresalice_users }}"
 
 - name: Set authorized key took from file
   ansible.posix.authorized_key:
     user: "{{ item.name }}"
     state: present
     key: "{{ item.key }}"
-  with_items: "{{ gfsc_users }}"
+  with_items: "{{ wheresalice_users }}"
 
 - name: Allow passwordless sudo
   community.general.sudoers:
