add recidive fail2ban config

--- a/wheresalice.yml
+++ b/wheresalice.yml
@@ -17,5 +17,6 @@
     fail2ban_services:
       - name: sshd
         port: 22
+      - name: recidive
 
 # Associate further roles to servers in specific group in this file...
