--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -14,6 +14,9 @@
   ansible.builtin.include_tasks: wheresalice.yml
 
 - name: Install common packages
-  ansible.builtin.package:
+  ansible.builtin.apt:
+    update_cache: true
     name:
       - rsync
+      - rsyslog
+      - vim
