--- a/roles/common/tasks/wheresalice.yml
+++ b/roles/common/tasks/wheresalice.yml
@@ -4,7 +4,7 @@
     name: "{{ item.name }}"
     state: present
     shell: /bin/bash
-    groups: adm,docker
+    groups: "{{ item.groups }}"
     append: true
   with_items: "{{ wheresalice_users }}"
 
