--- a/wheresalice.yml
+++ b/wheresalice.yml
@@ -13,7 +13,7 @@
     sysctl_overwrite:
       net.ipv4.ip_forward: 1
     network_ipv6_enable: true
-    ssh_listen_to: [0.0.0.0, "::"]
+    ssh_listen_to: ["0.0.0.0", "::"]
     fail2ban_services:
       - name: sshd
         port: 22
