--- a/.github/workflows/ansible-lint.yml
+++ b/.github/workflows/ansible-lint.yml
@@ -1,5 +1,5 @@
 name: ansible-lint
-on: [push, pull_request]
+on: [pull_request]
 
 jobs:
   build:
@@ -7,5 +7,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - uses: actions/checkout@v4
+      - name: Install dependencies
+        run:  |
+          ansible-galaxy install -f -r requirements.yml
       - name: Run ansible-lint
         uses: ansible/ansible-lint@v24.2.3
